@@ -1,3 +1,9 @@
+2010-02-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOBasic.c (TclOO_Object_Destroy): [Bug 2944404]: Do not
+	crash when a destructor deletes the object that is executing that
+	destructor.
+
 2010-02-01  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclVar.c (Tcl_ArrayObjCmd): [Bug 2939073]: Stop the [array
